# diploma

./: Dockerfile  FLUX_CODE_REVIEW.md  Readme.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start_service.py  test_flux_training.py
docs/: flux_lora_training.md
src/: __init__.py  main.py
src/api/: __init__.py  endpoints.py  schemas.py
src/config/: settings.py
src/database/: __init__.py  connection.py  models.py
src/models/: __init__.py  flux_module.py  flux_training_utils.py  llm_module.py  training_module.py  vlm_module.py
src/storage/: __init__.py  s3_client.py
src/telegram_bot/: __init__.py  bot.py  main.py
